# TradingBots.fun

./: .env.data-feeds.example  .env.data-feeds.public.md  .env.example  .env.testnet  .env.wallet.example  .gitignore  .~lock.scale_wallets.xlsx#  00_START_HERE.md  AI_DECISION_FRAMEWORK.md  API_BEST_PRACTICES.md  ARBITRAGE_DETECTION_EXECUTION.md  ARCHITECTURE.md  ARCHITECTURE_DATA_FEEDS.md  BACKLOG.md  BACKTEST_RESULTS_2024.md  BACKTEST_SYSTEM_GUIDE.md  BRIDGE_GUIDE.md  CEX_SIGNALS_DEX_EXECUTION.md  CLAUDE_MCP_SETUP.md  COMPLETE_DOCUMENTATION_MAP.md  COMPLETE_SYSTEM_GUIDE.md  COMPLETE_SYSTEM_OVERVIEW.md  CONTRARIAN_SENTIMENT_TRADING.md  CRYPTO_DATA_DICTIONARY.md  CUSTOM_DATA_FEEDS_GUIDE.md  Cargo.toml  DASHBOARD_GUIDE.md  DASHBOARD_SPECIFICATION.md  DATA_FEEDS_GEOLOCATION_GUIDE.md  DATA_FEEDS_RESEARCH.md  DATA_HIERARCHY_FINAL.md  DCA_AND_SMART_EXITS.md  DELIVERY_README.md  DELIVERY_SUMMARY.md  DEPLOYMENT_DIGITALOCEAN.md  DEPLOYMENT_READY.md  Dockerfile  ENVIRONMENT_FILES_ARCHITECTURE.md  EXPECTED_RESULTS_3_7_DAYS.md  FINAL_DELIVERY.md  (+62 more)
.sqlx/: query-03e2fceccd3d932649959e045c208913a43f9774546adb423e517cd5af29bfc0.json  query-059dc6b084024feb9d3da290fc5ec8c76963b2b8b10b5390b903cd5571468445.json  query-09a49b5aeec7b1e6bbf2c4e944091e41803dcb885d2b9187452ce468926bdf6a.json  query-0ffdda56c824416a4ee52a151f8882cef405eff79957d735608d0629056a7d3a.json  query-134f4f44c94a8945517695e90062346b53c7bab3f84223ae1803dcef2b170455.json  query-14f5f0915c903ac11ae41bf44b6df465ff0bc23de16c1c5831395e16855558ac.json  query-1bc55f1a2b977d169f2b3073bc770b1bbcc140b1b6a195e193aa22a52c7ff3b7.json  query-1d0729571cf4b3610fc18ec6e1230542651a8684360eb768562c841644d3db29.json  query-20d8ee51e3d6daa6ae1273808d97dce78ad60388c724bb25b4f8236ff799bed1.json  query-25ad20447aacd531dc03b01630553e36e5c1a2f65eedbf4c975c57cfa31b9007.json  query-25e61c40e52c06d0105cc9b6f74609c4d683373a4698624c41b4efc960cddfa0.json  query-373573806eeeb4e4a06aab0ae2a9fb5cf9ed5f9fa56feca3e31f24a1bc2969ef.json  query-386258416de8252a92d2cf34cc26aa5f115f096dccbe867878228f7fd7c71abf.json  query-398ab17802714a4567ae17cabc69335affdcf1a6bf1a7d05aa876d2d0f78aa75.json  query-3c5bd63442cd039407fac974f31092ad47f61b04e71b1a523e2fc69b30ea77cc.json  query-3ca63e5d743d9840c26091de5acdae30eca8c1664b5ff46f3d6c27ea2b4e54bb.json  query-4edc0c81f6c0df9e38b8e6bae26ec7613c6dc6b6f37c7462fac83ced548e8ac2.json  query-56dbe0329e3694349589e462988f66a1c851a05b1e53892d5824d25f0205c5d3.json  query-57bd27ad8ed25dc4c23c9ce0e176c816a2246c6472d8c17c5d195f043e678f38.json  query-6864421be9c70e909f97c01646a47598dd88adb3a61407500d3e8bc668f2ced0.json  query-72a82dba87f863bd47915ca24321825e54db0b1fb578bd87604decced38e758a.json  query-733e1ed3b10fa5f0b0dab5638e7267dedbf593fc917cf9832e181a22ce88b6b8.json  query-8abfd1dbb98592926bd530a114d3867850f8dfbf4c3343dd8ead01456de04bc6.json  query-8afb9c7cd6d01e759016cc248535bcc4788e764f7616cb364cd00903e50864e3.json  query-9075fea51c935b2a6de26f9fe0206ae1e5908969b7303a8b7cea7a066a2d7925.json  query-93673d199ce82ee30d820b2392fa77d8e69940adc6b8b04db73089ae0c5e372f.json  query-a63baceb87c3fe911d1f46c7a78f87cdffb1d4f0a247769af4d6971e793ddcd6.json  query-b79b757ea8e19eb1e4ba94ced8089c145e0b6f4a0bacf3fe820918a6e27d90b2.json  query-b8843e56c3ca70924538304111c0b42e7ca0f0ab96161cd76e3cad777a699638.json  query-b9566722993b22fa4628687e925862b1aea8e9ab2c86d573edca539ab390e1b4.json  query-d1a6fd10e87444d976000686a79dcc748aed0da35b38da7abac085d8d08809ad.json  query-db78b78fbe8525494f2c1a1e8fad346fe0ca0a7fd555938e09021fa16879aed8.json  query-dfeb4d6f46f6d6f220c36422190f23168ca99ee7a2dd33a2aa9af9653462e198.json  query-e2912e33a11d99fee76afefe4555f89a9acc6c41efb51fa8739ebd884e22ec48.json  query-e8582fc4baed3b467c1910de089faec49957eb363078b8d6821c9c8f0f8bd520.json  query-f17ed99a2748110f63017f392ca797ccb87973f6a65da579f37d0b0cc8eb4573.json  query-f987f0c911289e92d0697ef899a2f1e2ac413672860ec7711571f8d395c12a5d.json  query-fbe86adece28ea97efce7aca7fa907b4f30bf0cd10d30967ae188d52cb8b7b5c.json
docs/: COMPLETE_IMPLEMENTATION_GUIDE.md  DCA_PYRAMIDING_WITH_INSTITUTIONAL_STRATEGIES.md  IMPLEMENTATION_SUMMARY.md  INSTITUTIONAL_FRAMEWORKS_AND_INFRASTRUCTURE.md  INSTITUTIONAL_STRATEGIES_GAP_ANALYSIS.md  INSTITUTIONAL_STRATEGIES_IMPLEMENTATION.md  INSTITUTIONAL_STRATEGIES_README.md  (+4 more)
src/: db.rs  (+63 more)
(+241 files in other folders)
