[package]
name = "redrobot-hedgebot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio    = { version = "1.35", features = ["full"] }
reqwest  = { version = "0.11", features = ["json"] }
serde    = { version = "1.0",  features = ["derive"] }
serde_json = "1.0"
chrono   = { version = "0.4",  features = ["serde"] }
anyhow   = "1.0"
thiserror = "1.0"
log      = "0.4"
dotenv   = "0.15"
env_logger = "0.11"
uuid     = { version = "1.6",  features = ["v4", "serde"] }
rand     = "0.8"
hex      = "0.4"
hmac     = "0.12"
sha2     = "0.10"
tracing  = "0.1"

# Web dashboard
axum         = "0.7"
tower        = "0.4"
tower-http   = { version = "0.5", features = ["cors"] }

[profile.release]
opt-level = 3
lto       = true
