[package]
name = "tradingbots-fun"
version = "0.2.35"
edition = "2021"

[dependencies]
tokio      = { version = "1.35", features = ["full"] }
reqwest    = { version = "0.11", features = ["json"] }
serde      = { version = "1.0",  features = ["derive"] }
serde_json = "1.0"
chrono     = { version = "0.4",  features = ["serde"] }
anyhow     = "1.0"
thiserror  = "1.0"
log        = "0.4"
dotenvy    = "0.15"          # replaces unmaintained dotenv (RUSTSEC-2021-0141)
env_logger = "0.11"
uuid       = { version = "1.6",  features = ["v4", "serde"] }
rand       = "0.8"
hex        = "0.4"
base64     = "0.21"          # HTTP Basic Auth decoding for admin panel
hmac       = "0.12"
sha2       = "0.10"
walkdir    = "2"
sha3       = "0.10"          # keccak256 — required for EIP-712 order signing
k256       = { version = "0.13", features = ["ecdsa", "arithmetic"] }  # secp256k1 — HL order signing
aes-gcm    = "0.10"             # AES-256-GCM — per-user HL wallet key encryption
rmp-serde  = "1.1"           # msgpack encoding — required for HL action hash
tracing    = "0.1"
once_cell  = "1.21"

# WebSocket — price feed (Hyperliquid + Binance streaming)
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util      = "0.3"

# Web dashboard
axum         = { version = "0.7", features = ["form"] }
tokio-stream = { version = "0.1", features = ["sync"] }   # broadcast→Stream for SSE
tower        = "0.4"
tower-http   = { version = "0.5", features = ["cors"] }

# Authentication
jsonwebtoken = "9"          # Privy JWT verification (ES256 + JWKS parsing)

# Database — async PostgreSQL with compile-time checked queries
# runtime-tokio  → uses tokio async runtime (matches our executor)
# postgres        → PostgreSQL driver (libpq-free, pure Rust)
# macros          → query!() / query_as!() compile-time SQL verification
# chrono          → DateTime<Utc> ↔ TIMESTAMPTZ
# uuid            → Uuid ↔ UUID
# json            → serde_json::Value ↔ JSONB
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
    "uuid",
    "json",
    "rust_decimal",
] }
rust_decimal = "1"

[profile.release]
opt-level = 3
lto       = true
